# Coreutils-AI-navigator

./: .gitignore  CHANGE.md  README.md  build_vector_db_cobol.py  c_ast_parser.py  cobol_ast_parser.py  cobol_segments.json  cobol_segments_summary.json  package-lock.json  pyproject.toml  reAct_agent.py  requirements.txt
.devcontainer/: devcontainer.json
utils/: models.py  query_schema.py  query_schema_cob.py  tools.py  vector_store.py
vector_db_index/cics_genapp_index_procedure/: index.faiss  index.pkl
vector_db_index/cics_genapp_index_procedure_with_summary/: index.faiss  index.pkl
vector_db_index/cics_genapp_index_readme/: index.faiss  index.pkl
vector_db_index/coreutils_index/: index.pkl
vector_db_index/coreutils_index_comments/: index.pkl
vector_db_index/coreutils_index_functions/: index.faiss  index.pkl
vector_db_index/coreutils_index_functions_structs_enums/: index.pkl
vector_db_index/coreutils_index_readmes/: index.faiss  index.pkl
