[project]
name = "coreutilsragagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.1",
    "ipython>=8.37.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.54.0",
    "tqdm>=4.67.1",
    "tree-sitter==0.21.3",
    "tree-sitter-c>=0.24.1",
]
